--- a/main.tex
+++ b/main.tex
@@ -112,13 +112,13 @@
     \resumeSubheading
       {Massachusetts Institute of Technology (MIT)}{Cambridge, MA}
       {\shortstack[l]{
-        Master of Science in Computer Science;  GPA: 5.0/5.0 \\
-        PhD student in Computer Science
+        Master of Science in Computer Science;  GPA: 5.0/5.0
+        %\\ PhD student in Computer Science
       }
       }
       {\shortstack[r]{
-          Sep 2017 - Feb 2020 (exp.) \\
-          Sep 2017 - Ongoing
+          Sep 2017 - Feb 2020 (exp.)
+        %\\  Sep 2017 - Ongoing
         }
       }
       {
@@ -151,9 +151,9 @@
     \item \small Built complete machine learning pipelines (data scraping, cleaning, model design, implementation, training, visualization, and analysis)
       \resumeSubItem{NLPProg} {Ongoing work on  Automatic Program Repair using Natural Language hints (parsing python code, AST differentiation, graph neural network with message passing)}
       \vspace{3pt}
-      \resumeSubItem{PGM} {Implemented multi-task learning strategies for representation learning in a pre-training scenario; pretrain on part-of-speech tagging, named entity recognition, chunking, dependency parsing, language modeling and fine-tune on sentiment analysis, question answering, and SNLI}
+      \resumeSubItem{PGM} {Designed a framework to experiment with multi-task learning strategies for representation learning in a pre-training scenario; pretrain on part-of-speech tagging, named entity recognition, chunking, dependency parsing, language modeling and fine-tune on sentiment analysis, question answering, and SNLI}
       \vspace{3pt}
-        \resumeSubItem{RTN} {Designed a framework for many-attribute information extraction, leveraging techniques from transfer learning, domain adaptation and semi-supervised learning}
+        \resumeSubItem{RTN} {Implemented a model for many-attribute information extraction, leveraging techniques from transfer learning, domain adaptation and semi-supervised learning}
       \vspace{3pt}
       \resumeItemListEnd
 
@@ -197,6 +197,7 @@
 %-----------PROJECTS-----------------
 \shorterSection{Projects}
   \resumeSubHeadingListStart
+  \resumeSubItem{\href{https://github.com/varal7/botafogo}{\faGithub\hspace{0.5em}Botafogo (CSS)}} {Responsive Wordpress theme for the ballroom dance team's website}
   \resumeSubItem{Kinder (TypeScript)} {Cloud-managed engine automating game actions through high-level scripts (MMORPG bots), 1000+ users.}
   \resumeSubItem{\href{https://github.com/varal7/ieturk}{\faGithub\hspace{0.5em}IE-Turk (jQuery)}} { (200+ stars) Annotation tool for information extraction and named entity recognition with Mechanical Turk}
   \resumeSubItem{\href{https://github.com/varal7/random_bst}{\faGithub\hspace{0.5em}Zip Trees benchmark (C++)}}{Implementation and benchmark of random binary search trees: skip lists, treaps and zip trees}
@@ -225,7 +226,7 @@
 \shorterSection{Leadership and Awards}
   \resumeSubHeadingListStart
     \item[]\small{
-        {Finalist of the Data Science Game (DSG 2018), Ranked 37/2306 at Battle Dev (France's top coding competition - 2017), President of Binet Réseau (Student association that provides SysAdmin services, training and support - 2015) \textbf{Bronze medal at the International Mathematical Olympiad} (IMO 2012), Second national prize in Mathematics (Concours Général - 2012),  Third national prize in Biology (Concours Général - 2012),  Regional Awards in Physics (Concours Général - 2012), Bronze medal at the Balkan Mathematical Olympiad (BMO 2012), \textbf{Winner of the French Math Olympiads} (Olympiades Académiques de Mathématiques - 2011)  \vspace{-6pt}}
+        {Finalist of the Data Science Game (DSG 2018), Ranked 37/2306 at Battle Dev (France's top coding competition - 2017), President of Binet Réseau (Student association that provides SysAdmin services, training and support - 2015) \textbf{Bronze medal at the International Mathematical Olympiad} (IMO 2012), Second national prize in Mathematics (Concours Général - 2012),  Third national prize in Biology (Concours Général - 2012),  Regional Awards in Physics (Concours Général - 2012), Bronze medal at the Balkan Mathematical Olympiad (BMO 2012), \textbf{Winner of the French Math Olympiads} (First National Prize at Olympiades Académiques de Mathématiques - 2011)  \vspace{-6pt}}
     }
   \resumeSubHeadingListEnd
 %-------------------------------------------
