--- a/main.tex
+++ b/main.tex
@@ -94,9 +94,12 @@
 
 %----------HEADING-----------------
 \begin{center}
-  \small{ \textbf{\href{}{\huge Victor Quach}} \\  \href{mailto:victor.quach@m4x.org}{\color{blue}\underline{victor.quach@m4x.org}} $\vert$
+  \small{
+  \textbf{\href{}{\huge Victor Quach}} \\
+  \vspace{5pt}
+  \href{mailto:victor.quach@m4x.org}{\color{blue}\underline{victor.quach@m4x.org}} $\vert$
   857-829-7139 $\vert$
-  LinkedIn: \href{https://www.linkedin.com/in/varal7/}{\color{blue}\underline{varal7}} $\vert$
+  LinkedIn: \href{https://www.linkedin.com/in/victor-quach-ab90a584/}{\color{blue}\underline{victor-quach-ab90a584}} $\vert$
   Github: \href{https://github.com/varal7}{\color{blue}\underline{varal7}}
 }
 
@@ -112,12 +115,12 @@
     \resumeSubheading
       {Massachusetts Institute of Technology (MIT)}{Cambridge, MA}
       {\shortstack[l]{
-        Master of Science in Computer Science;  GPA: 5.0/5.0
+        PhD in Computer Science;  GPA: 5.0/5.0
         %\\ PhD student in Computer Science
       }
       }
       {\shortstack[r]{
-          Sep 2017 - May 2020 (exp.)
+          Sep 2017 - Jun 2022 (exp.)
         %\\  Sep 2017 - Ongoing
         }
       }
@@ -145,51 +148,42 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {MIT Computer Science and Artificial Intelligence Laboratory (MIT CSAIL)}{Cambridge, MA}
-      {Research Assistant in the Natural Language Processing group}{Sep 2017 - Ongoing}
+      {Research Assistant}{Cambridge, MA}
+      {MIT Computer Science and Artificial Intelligence Laboratory (MIT CSAIL) - Regina Barzilay group}{Sep 2017 - Ongoing}
       \resumeItemListStart
-    \item \small Built complete machine learning pipelines (data scraping, cleaning, model design, implementation, training, visualization, and analysis)
-      \resumeSubItem{NLPProg} {Ongoing work on  Automatic Program Repair using Natural Language hints (parsing python code, AST differentiation, graph neural network with message passing)}
-      \vspace{3pt}
-      \resumeSubItem{PGM} {Designed a framework to experiment with multi-task learning strategies for representation learning in a pre-training scenario; pretrain on part-of-speech tagging, named entity recognition, chunking, dependency parsing, language modeling and fine-tune on sentiment analysis, question answering, and SNLI}
-      \vspace{3pt}
-        \resumeSubItem{RTN} {Implemented a model for many-attribute information extraction, leveraging techniques from transfer learning, domain adaptation and semi-supervised learning}
-      \vspace{3pt}
+      \item \small Ongoing research work on deep rationalization, learning disentangled latent spaces.
+      \item \small Reviewed background work and experimented with new methods for NLP (language models, multi-task learning, representation learning, semi-supervised learning), automatic program repair (graph neural networks) and computational chemistry (molecular property prediction, drug design)
+      \item \small Built complete machine learning pipelines (data scraping, cleaning, model design, implementation, training, visualization, and analysis)
       \resumeItemListEnd
 
     \resumeSubheading
-      {MIT Department of Electrical Engineering and Computer Science (MIT EECS)}{Cambridge, MA}
-      {Teaching assistant}{Jan 2019 - Aug 2019}
+      {Research Intern}{Cambridge, MA}
+      {IBM Research}{Jun 2020 - Aug 2020}
       \resumeItemListStart
-        \resumeItem{6.86x Machine Learning with Python: from Linear Models to Deep Learning}
-        {6.86x is an online class part of MITx's MicroMaster in Statistics and Data Science offered to 1000+ students, offered for the first time this year.
-        \vspace{-5pt}
-          \begin{itemize}
-            \item Expanded the content of the course by adding additional problems, debugging the handout code, devising better solutions and rewriting the automatic graders so they could scale to thousands of students.
-            \item Assembled a class project for learners to compare EM and K-means for a collaborative filtering task
-            \item Revitalized a reinforcement learning problem with task descriptions in natural language for learners to experiment with tabular learning, linear Q learning and deep Q learning
-          \end{itemize}
-        }
-        \resumeItem{6.883 Modeling with machine learning: from algorithms to applications}
-        {
-          6.883 is an intermediary-level Machine Learning course offered to 100+  MIT undergrads and graduate students, offered for the first time this year.
+        \item \small Developed a novel training scheme to improve generalizability of Transformers beyond the maximum length of their training data. Applications to question answering with long context.
+      \resumeItemListEnd
+
+
+    \resumeSubheading
+      {Teaching assistant}{Cambridge, MA}
+      {MIT Department of Electrical Engineering and Computer Science (MIT EECS)}{Jan 2019 - Aug 2019}
+      \resumeItemListStart
+      \resumeItem{6.86x/6.883 Machine Learning with Python: from Linear Models to Deep Learning}{Expanded the content of the course by adding additional problems, debugging the handout code, devising better solutions and rewriting the automatic graders so they could scale to thousands of students.}
         }
       \resumeItemListEnd
 
     \resumeSubheading
-      {École Normale Supérieure - EHESS}{Paris, France}
-      {Research Intern in the Cognitive Machine Learning team}{Apr 2017 -- Aug 2017}
+      {Research Intern}{Paris, France}
+      {École Normale Supérieure - EHESS - Cognitive Machine Learning team}{Apr 2017 -- Aug 2017}
       \resumeItemListStart
-        \resumeItem{Deep Logic}
-          {Designed, implemented and benchmarked hierarchical neural architectures on logical reasoning tasks with PyTorch. Experimented with hypernetworks in a meta-learning setting.  }
+          \item \small Designed, implemented and benchmarked hierarchical neural architectures on logical reasoning tasks with PyTorch. Experimented with hypernetworks in a meta-learning setting.
       \resumeItemListEnd
 
     \resumeSubheading
-      {Theodo}{Paris, France}
-      {Software Engineer Intern}{Jun 2016 - Sep 2016}
+      {Software Engineer Intern}{Paris, France}
+      {Theodo}{Jun 2016 - Sep 2016}
       \resumeItemListStart
-        \resumeItem{ELSAN}
-          {Developed a web application for a medical company using Symfony within an Agile team using Lean and Scrum}
+        \item \small Developed a web application for a medical company using Symfony within an Agile team using Lean and Scrum
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
@@ -218,7 +212,7 @@
     }
     \vspace{-5pt}
     \item{
-     \textbf{Libraries}{: PyTorch, NumPy, Pandas, TensorFlow, Keras, Scikit-Learn, OpenCV, Jupyter, Django, Flask, Vue.js, React}
+     \textbf{Libraries}{: PyTorch, NumPy, Pandas, Keras, Scikit-Learn, OpenCV, Jupyter, Django, Flask, Vue.js, React}
     }
 \resumeSubHeadingListEnd
 
