--- a/main.tex
+++ b/main.tex
@@ -152,9 +152,18 @@
       {MIT Computer Science and Artificial Intelligence Laboratory (MIT CSAIL) - Regina Barzilay group}{Sep 2017 - Ongoing}
       \resumeItemListStart
       \item \small Ongoing research work on deep rationalization, learning disentangled latent spaces.
-      \item \small Reviewed background work and experimented with new methods for NLP (language models, multi-task learning, representation learning, semi-supervised learning), automatic program repair (graph neural networks) and computational chemistry (molecular property prediction, drug design)
+      \item \small Reviewed background work and experimented with new methods for \textbf{NLP} (language models, multi-task learning, representation learning, semi-supervised learning), \textbf{automatic program repair} (graph neural networks) and \textbf{computational chemistry} (molecular property prediction, drug design)
       \item \small Built complete machine learning pipelines (data scraping, cleaning, model design, implementation, training, visualization, and analysis)
       \resumeItemListEnd
+
+    \resumeSubheading
+      {Software Engineering Intern}{Cambridge, MA}
+      {Facebook - PyTorch Core Team}{Jun 2021 - Aug 2021}
+      \resumeItemListStart
+          \item \small Improved performance of the autograd engine by 16\%.
+          \item \small Developed an API for users to register saved tensor hooks reducing memory usage from $O(n)$ to $O(1)$ at the cost of a 5x slowdown.
+      \resumeItemListEnd
+
 
     \resumeSubheading
       {Research Intern}{Cambridge, MA}
@@ -169,18 +178,17 @@
       {MIT Department of Electrical Engineering and Computer Science (MIT EECS)}{Jan 2019 - Aug 2019}
       \resumeItemListStart
       \resumeItem{6.86x/6.883 Machine Learning with Python: from Linear Models to Deep Learning}{Expanded the content of the course by adding additional problems, debugging the handout code, devising better solutions and rewriting the automatic graders so they could scale to thousands of students.}
-        }
       \resumeItemListEnd
 
     \resumeSubheading
       {Research Intern}{Paris, France}
       {École Normale Supérieure - EHESS - Cognitive Machine Learning team}{Apr 2017 -- Aug 2017}
       \resumeItemListStart
-          \item \small Designed, implemented and benchmarked hierarchical neural architectures on logical reasoning tasks with PyTorch. Experimented with hypernetworks in a meta-learning setting.
+          \item \small Designed hierarchical neural architectures on logical reasoning tasks with PyTorch.
       \resumeItemListEnd
 
     \resumeSubheading
-      {Software Engineer Intern}{Paris, France}
+      {Software Engineering Intern}{Paris, France}
       {Theodo}{Jun 2016 - Sep 2016}
       \resumeItemListStart
         \item \small Developed a web application for a medical company using Symfony within an Agile team using Lean and Scrum
@@ -191,6 +199,7 @@
 %-----------PROJECTS-----------------
 \shorterSection{Projects}
   \resumeSubHeadingListStart
+  \resumeSubItem{\href{https://github.com/varal7/blank_language_model}{\faGithub\hspace{0.5em}Blank Language Model (Pytorch)}} {Flexible sequence modeling by any-order generation}
   \resumeSubItem{\href{https://github.com/varal7/botafogo}{\faGithub\hspace{0.5em}Botafogo (CSS)}} {Responsive Wordpress theme for the ballroom dance team's website}
   \resumeSubItem{Kinder (TypeScript)} {Cloud-managed engine automating game actions through high-level scripts (MMORPG bots), 1000+ users.}
   \resumeSubItem{\href{https://github.com/varal7/ieturk}{\faGithub\hspace{0.5em}IE-Turk (jQuery)}} { (200+ stars) Annotation tool for information extraction and named entity recognition with Mechanical Turk}
