Remove internship mention

--- a/main.tex
+++ b/main.tex
@@ -105,8 +105,9 @@
 
 \end{center}
 
-\begin{center}
-\end{center}
+% \begin{center}
+%   Looking for an internship, summer 2022
+% \end{center}
 
 
 %-----------EDUCATION-----------------
@@ -120,7 +121,7 @@
       }
       }
       {\shortstack[r]{
-          Sep 2017 - Jun 2022 (exp.)
+          Sep 2017 - Jun 2023 (exp.)
         %\\  Sep 2017 - Ongoing
         }
       }
@@ -151,7 +152,7 @@
       {Research Assistant}{Cambridge, MA}
       {MIT Computer Science and Artificial Intelligence Laboratory (MIT CSAIL) - Regina Barzilay group}{Sep 2017 - Ongoing}
       \resumeItemListStart
-      \item \small Ongoing research work on deep rationalization, learning disentangled latent spaces.
+      \item \small Ongoing research work on privacy-preserving machine learning
       \item \small Reviewed background work and experimented with new methods for \textbf{NLP} (language models, multi-task learning, representation learning, semi-supervised learning), \textbf{automatic program repair} (graph neural networks) and \textbf{computational chemistry} (molecular property prediction, drug design)
       \item \small Built complete machine learning pipelines (data scraping, cleaning, model design, implementation, training, visualization, and analysis)
       \resumeItemListEnd
@@ -229,7 +230,7 @@
 \shorterSection{Leadership and Awards}
   \resumeSubHeadingListStart
     \item[]\small{
-        {Finalist of the Data Science Game (DSG 2018), Ranked 37/2306 at Battle Dev (France's top coding competition - 2017), President of Binet Réseau (Student association that provides SysAdmin services, training and support - 2015) \textbf{Bronze medal at the International Mathematical Olympiad} (IMO 2012), Second national prize in Mathematics (Concours Général - 2012),  Third national prize in Biology (Concours Général - 2012),  Regional Awards in Physics (Concours Général - 2012), Bronze medal at the Balkan Mathematical Olympiad (BMO 2012), \textbf{Winner of the French Math Olympiads} (First National Prize at Olympiades Académiques de Mathématiques - 2011)  \vspace{-6pt}}
+        {Placed 37/2306 at Battle Dev (France's top coding competition - 2017), President of Binet Réseau (Student association that provides SysAdmin services, training and support - 2015) \textbf{Bronze medal at the International Mathematical Olympiad} (IMO 2012), Second national prize in Mathematics (Concours Général - 2012),  Third national prize in Biology (Concours Général - 2012),  Regional Award in Physics (Concours Général - 2012), Bronze medal at the Balkan Mathematical Olympiad (BMO 2012), \textbf{Winner of the French Math Olympiads} (First National Prize at Olympiades Académiques de Mathématiques - 2011)  \vspace{-6pt}}
     }
   \resumeSubHeadingListEnd
 %-------------------------------------------
