Remove Java lol

--- a/main.tex
+++ b/main.tex
@@ -247,7 +247,7 @@
   \resumeSubHeadingListStart
   \small
     \item{
-     \textbf{Languages}{: Python, JavaScript, TypeScript, HTML, Java, C++}
+     \textbf{Languages}{: Python, C++, JavaScript, TypeScript, HTML}
      \hfill
      \textbf{Technologies}{: MacOs, Linux, vim, tmux, git, nginx, Docker}
     }
