--- a/main.tex
+++ b/main.tex
@@ -211,7 +211,7 @@
     \item[]\small{
 \hspace{-9pt}
 \faFile[regular]~
-\textbf{Syfer: Neural Obfuscation for Private Data Release}, arXiv 2022
+\textbf{Syfer: Neural Obfuscation for Private Data Release}, Preprint
 }
     \vspace{-5pt}
     \item[]\small{
@@ -253,15 +253,26 @@
     }
     \vspace{-5pt}
     \item{
-     \textbf{Libraries}{: PyTorch, NumPy, Pandas, Keras, Scikit-Learn, OpenCV, Jupyter, Django, Flask, Vue.js, React}
+     \textbf{Libraries}{: PyTorch, NumPy, Pandas, Scikit-Learn, Jupyter, Django, Flask, Vue.js, React}
     }
 \resumeSubHeadingListEnd
 %-----------Awards-----------------
 \shorterSection{Leadership and Awards}
   \resumeSubHeadingListStart
-    \item[]\small{
-        {Placed 37/2306 at Battle Dev (France's top coding competition - 2017), President of Binet Réseau (Student association that provides SysAdmin services, training and support - 2015) \textbf{Bronze medal at the International Mathematical Olympiad} (IMO 2012), Second national prize in Mathematics (Concours Général - 2012),  Third national prize in Biology (Concours Général - 2012),  Regional Award in Physics (Concours Général - 2012), Bronze medal at the Balkan Mathematical Olympiad (BMO 2012), \textbf{Winner of the French Math Olympiads} (First National Prize at Olympiades Académiques de Mathématiques - 2011)  \vspace{-6pt}}
-    }
+    % \item[]\small{
+    %     {Placed 37/2306 at Battle Dev (France's top coding competition - 2017), President of Binet Réseau (Student association that provides SysAdmin services, training and support - 2015) \textbf{Bronze medal at the International Mathematical Olympiad} (IMO 2012), Second national prize in Mathematics (Concours Général - 2012),  Third national prize in Biology (Concours Général - 2012),  Regional Award in Physics (Concours Général - 2012), Bronze medal at the Balkan Mathematical Olympiad (BMO 2012), \textbf{Winner of the French Math Olympiads} (First National Prize at Olympiades Académiques de Mathématiques - 2011)  \vspace{-6pt}}
+    % }
+\item\small {Bronze Medal at the International Mathematical Olympiad (IMO 2012)}
+    \vspace{-5pt}
+\item\small {Second National Prize in Mathematics (Concours Général 2012)}
+    \vspace{-5pt}
+\item\small {Third National Prize in Life and Earth Sciences (Concours Général 2012)}
+    \vspace{-5pt}
+\item\small {Regional Award in Physics (Concours Général 2012)}
+    \vspace{-5pt}
+\item\small {Bronze Medal at the Balkam Mathematical Olympiad (BMO 2012)}
+    \vspace{-5pt}
+\item\small {First National Prize at French Math Olympaids (Olympiade Académiques de Mathématiques 2011)}
   \resumeSubHeadingListEnd
 %-------------------------------------------
 \end{document}
