--- a/main.tex
+++ b/main.tex
@@ -121,14 +121,14 @@
       }
       }
       {\shortstack[r]{
-          Sep 2017 - Jun 2023 (exp.)
+          Sep 2017 - Jun 2023
         %\\  Sep 2017 - Ongoing
         }
       }
       {
       \vspace{-6pt}
       % \resumeItemNoBullet{\quad Thesis}{Automatic Program Repair with Natural Language Hints}
-      \resumeItemNoBullet{\quad Elective courses}{Advanced Machine Learning, Advanced Natural Language Processing, Advanced Algorithms, Computer Systems Security}
+      \resumeItemNoBullet{\quad Thesis Title}{Generative Modeling with Guarantees}
     }
     \vspace{2pt}
     \resumeSubheading
@@ -149,18 +149,25 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Research Assistant}{Cambridge, MA}
-      {MIT Computer Science and Artificial Intelligence Laboratory (MIT CSAIL) - Regina Barzilay group}{Sep 2017 - Ongoing}
+      {Algorithm Developer}{NYC, NY}
+      {Hudson River Trading}{Aug 2023 - Present}
       \resumeItemListStart
-      \item \small Ongoing research work on \textbf{privacy-preserving machine learning} in the context of applying Deep Learning to medical images.
-      \item \small Reviewed background work and experimented with new methods for \textbf{NLP} (language models, multi-task learning, representation learning, semi-supervised learning), \textbf{automatic program repair} (graph neural networks) and \textbf{computational chemistry} (molecular property prediction, drug design).
+          \item \small Quant Research
+      \resumeItemListEnd
+
+    \resumeSubheading
+      {Research Assistant}{Cambridge, MA}
+      {MIT Computer Science and Artificial Intelligence Laboratory (MIT CSAIL) - Regina Barzilay group}{Sep 2017 - Jun 2023}
+      \resumeItemListStart
+      \item \small Thesis work on \textbf{generative modeling with guarantees}.
+      \item \small Reviewed background work and designed new methods for \textbf{NLP} (language models, multi-task learning, representation learning, semi-supervised learning), \textbf{automatic program repair} (graph neural networks), \textbf{computational chemistry} (molecular property prediction, drug design), \textbf{privacy-preserving ML} and \textbf{conformal language modeling}.
       \resumeItemListEnd
 
     \resumeSubheading
       {Algorithm Developer Intern}{NYC, NY}
       {Hudson River Trading}{May 2022 - Aug 2022}
       \resumeItemListStart
-          \item \small Forecasting for Retail Market Making.
+          \item \small Quant Research for Retail Market Making.
           \item \small Alpha and Order Execution Research for High Frequency Trading.
       \resumeItemListEnd
 
@@ -208,6 +215,12 @@
 %-----------PUBLICATIONS-----------------
 \shorterSection{Publications}
   \resumeSubHeadingListStart
+    \item[]\small{
+\hspace{-9pt}
+\faFile[regular]~
+\textbf{Conformal Language Modeling}, Under review
+}
+    \vspace{-5pt}
     \item[]\small{
 \hspace{-9pt}
 \faFile[regular]~
@@ -270,9 +283,9 @@
     \vspace{-5pt}
 \item\small {Regional Award in Physics (Concours Général 2012)}
     \vspace{-5pt}
-\item\small {Bronze Medal at the Balkam Mathematical Olympiad (BMO 2012)}
+\item\small {Bronze Medal at the Balkan Mathematical Olympiad (BMO 2012)}
     \vspace{-5pt}
-\item\small {First National Prize at French Math Olympaids (Olympiade Académiques de Mathématiques 2011)}
+\item\small {First National Prize at French Math Olympiads (Olympiades Académiques de Mathématiques 2011)}
   \resumeSubHeadingListEnd
 %-------------------------------------------
 \end{document}
